# QAHQ

./: .gitignore  MANUAL.md  PRD.md  README.md  requirements.txt  verify_system.py
.jules/: sentinel.md
QAHQ/: main.py
QAHQ/Applications/MCP/: server.py
QAHQ/Applications/TestCounterSingleton/: test_counter.py
QAHQ/Applications/TestReportSender/: test_report_sender.py
QAHQ/Applications/WorkerManager/: manager.py  worker_client.py
QAHQ/Databases/: database.py  models.py  qahq.db
QAHQ/Operations/Log/: logger.py
QAHQ/Operations/Mail/: send_mail.py
QAHQ/Securities/: auth.py  ldap_handler.py
backend/: .env.example  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: cced8e798cd6_initial_schema.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  deps.py  results.py  tasks.py  workers.py  ws.py
backend/app/core/: config.py  permissions.py  security.py
backend/app/db/: models.py  seed.py  session.py
backend/app/mcp/: server.py
backend/app/services/: dispatcher.py  hub.py  ldap.py  registry.py  robot_parser.py
backend/tests/: conftest.py  test_auth_rbac.py  test_results_upload.py  test_task_lifecycle.py  test_worker_protocol.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  api.ts  auth.tsx  index.css  main.tsx  styles.css  ws.ts
frontend/src/components/: Dashboard.jsx  Layout.jsx  Layout.tsx  Login.jsx
worker/: pyproject.toml
worker/qahq_worker/: client.py
(+7 files in other folders)
