[project]
name = "qahq-worker"
version = "2.0.0"
description = "QAHQ worker client — connects to HQ and executes tasks"
requires-python = ">=3.11"
dependencies = [
    "websockets>=14.0",
]

[project.optional-dependencies]
robot = ["robotframework>=7.0"]

[project.scripts]
qahq-worker = "qahq_worker.client:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
